<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pavlovic.cubes.events24.ui.fragment.ProfileFragment"
    android:background="@color/purple_dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_marginLeft="@dimen/margin_for_profile"
        android:layout_marginTop="@dimen/margin_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_profile"
        app:layout_constraintStart_toEndOf="@+id/circleImage"
        app:layout_constraintTop_toTopOf="@+id/circleImage" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/text_view_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_profile"
        app:layout_constraintStart_toStartOf="@+id/circleImage"
        app:layout_constraintTop_toBottomOf="@+id/circleImage" />

    <TextView
        android:id="@+id/textViewNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_view_notifications"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_profile_small"
        app:layout_constraintStart_toStartOf="@+id/textViewSettings"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toEndOf="@+id/textViewNotifications"
        app:layout_constraintTop_toTopOf="@+id/textViewNotifications" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/text_view_language"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_profile_small"
        app:layout_constraintStart_toStartOf="@+id/textViewSettings"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotifications" />

    <TextView
        android:id="@+id/textViewLanguageChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_change"
        android:textColor="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toEndOf="@+id/textViewLanguage"
        app:layout_constraintTop_toTopOf="@+id/textViewLanguage" />

    <TextView
        android:id="@+id/textViewSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/text_view_support"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_for_profile"
        app:layout_constraintStart_toStartOf="@+id/textViewLanguage"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanguage" />

    <TextView
        android:id="@+id/textViewHelpCentre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="@dimen/margin_for_profile"
        android:text="@string/text_view_help_centre"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewSupport"
        app:layout_constraintTop_toBottomOf="@+id/textViewSupport" />

    <ImageView
        android:id="@+id/imageViewHelpCentre"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="@+id/textViewLanguageChange"
        app:layout_constraintTop_toTopOf="@+id/textViewHelpCentre" />

    <TextView
        android:id="@+id/textViewTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="@dimen/margin_for_profile"
        android:text="@string/text_view_terms_and_conditions"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewHelpCentre"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelpCentre" />

    <ImageView
        android:id="@+id/imageViewTermsAndConditions"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHelpCentre"
        app:layout_constraintTop_toTopOf="@+id/textViewTermsAndConditions" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_for_profile"
        android:layout_marginRight="@dimen/margin_for_profile"
        android:layout_marginBottom="@dimen/margin_main"
        android:background="@drawable/button_stroke_background"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>