<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark">

    <Button
        android:id="@+id/buttonKoncerti"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/button_stroke_background"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="@dimen/margin_for_profile"
        android:layout_marginLeft="@dimen/margin_for_profile"
        android:text="@string/koncerti"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPozorista"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/button_stroke_background"
        android:backgroundTint="@color/purple"
        android:layout_marginLeft="@dimen/margin_small"
        android:text="@string/pozorista"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/buttonKoncerti"
        app:layout_constraintTop_toTopOf="@+id/buttonKoncerti" />

    <Button
        android:id="@+id/buttonSport"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="@drawable/button_stroke_background"
        android:backgroundTint="@color/purple"
        android:layout_marginLeft="@dimen/margin_small"
        android:text="@string/sport"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/buttonPozorista"
        app:layout_constraintTop_toTopOf="@+id/buttonPozorista" />

    <Button
        android:id="@+id/buttonAll"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/margin_small"
        android:background="@drawable/button_stroke_background"
        android:backgroundTint="@color/purple"
        android:text="@string/all"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/buttonSport"
        app:layout_constraintTop_toTopOf="@+id/buttonSport" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_for_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/purple_dark"
        app:layout_constraintTop_toBottomOf="@+id/buttonKoncerti">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>