<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pavlovic.cubes.events24.ui.activity.registration.LoginActivity"
    android:background="@color/purple">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="top"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main"
            android:text="@string/text_forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_biggest"
            app:layout_constraintBottom_toTopOf="@+id/editTextMail"
            app:layout_constraintStart_toStartOf="parent" />

        <com.pavlovic.cubes.events24.ui.view.EventsEditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_main"
            app:layout_constraintBottom_toTopOf="@+id/buttonSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/text_email"
            android:inputType="text|textEmailAddress"/>


        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_main"
            android:background="@drawable/button_background"
            android:text="@string/text_send_to_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>